# aitake

./: .gitignore  README.md  create_stripe_checkout.ts
.github/workflows/: deploy-channels-cloudrun.yml  deploy-cloudrun-template.yml  deploy-landing-page-vercel.yml  deploy-orderbot-service-cloudrun.yml  deploy_crm.yml
channels/: debug_log.txt  error.txt  pyproject.toml  repro_webhook.py  temp2.json  temp3.json  temp_phone_numbers.json  test_upload.py
channels/app/: main.py
channels/app/whatsapp/: __init__.py  client.py  config.py  models.py  onboarding.py  processor.py  profile.py  supabase_client.py  utils.py
crm/: .firebaserc  README.md  analysis_output.txt  analyze.txt  build_log.txt  pubspec.yaml
crm/android/: validate_error.txt
crm/android/app/: build.gradle.kts
crm/assets/: env
crm/lib/: main.dart
crm/lib/models/: models.dart
crm/lib/providers/: providers.dart
crm/lib/screens/: business_list_screen.dart  chat_screen.dart  conversations_screen.dart  dashboard_screen.dart  login_screen.dart  menu_screen.dart  orders_screen.dart  register_business_screen.dart  whatsapp_verification_screen.dart
db/: check_db.py  init_db.py  pyproject.toml
db/app/: database.py  main.py  models.py
db/schemas/: dummy_data.sql  schema.sql  waitlist.sql
landing-page/: package.json  pnpm-lock.yaml
landing-page/app/: layout.tsx  page.tsx
orderbot/: Dockerfile  pyproject.toml  pytest_out.txt  pytest_out2.txt  requirements.txt  test_chat.py  test_out.txt  test_out_real_utf8.txt  test_out_utf8.txt  test_runner.py
orderbot/app/: __init__.py  main.py  schemas.py  supabase_client.py  team.py
orderbot/app/order_agent/: agent.py  graph.py  nodes.py  session.py  state.py  tools.py  utils.py
orderbot/app/tests/: test_order_agent.py
orderbot/tests/: reproduce_double_count.py  reproduce_issue.py  test_fix.py  verify_merge.py
(+3 files in other folders)
