[project]
name = "channels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi[standard]>=0.128.0",
    "google-auth>=2.48.0",
    "httpx>=0.28.1",
    "phonenumbers>=9.0.24",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.11.0",
]
